--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,12 @@ body{
     @apply px-4;
   }
 }
+
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
