--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,10 @@
   max-width: 220px;
   overflow-wrap: break-word;
 }
+
+.allow-3-lines {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
