--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: "Lato", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 16px;
   }
   body {
