--- a/src/index.css
+++ b/src/index.css
@@ -3,109 +3,105 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 240 20% 97%;
-    --foreground: 0 0% 0%;
-    
+    :root {
+        --background: 240 20% 97%;
+        --foreground: 0 0% 0%;
 
-    --text: 0 0% 0%;
+        --text: 0 0% 0%;
 
-    --popover: 53 18% 85%;
-    --popover-foreground: 184 13% 38%;
+        --popover: 53 18% 85%;
+        --popover-foreground: 184 13% 38%;
 
-    --border: 240 13% 92%;
-    --input: 184 13% 38%;
+        --border: 240 13% 92%;
+        --input: 184 13% 38%;
 
-    --card:  60 4.8% 95.9%;
-    --card-foreground:  25 5.3% 44.7%;
+        --card: 60 4.8% 95.9%;
+        --card-foreground: 25 5.3% 44.7%;
 
-    --primary-foreground: 220 57% 12%;
-    --secondary-foreground: 184 13% 38%;
+        --primary-foreground: 220 57% 12%;
+        --secondary-foreground: 184 13% 38%;
 
-    --muted: 60 4.8% 95.9%;
-    --muted-foreground: 25 5.3% 44.7%;
+        --muted: 60 4.8% 95.9%;
+        --muted-foreground: 25 5.3% 44.7%;
 
-    --accent: 60 4.8% 95.9%;
-    --accent-foreground: 24 9.8% 10%;
+        --accent: 60 4.8% 95.9%;
+        --accent-foreground: 24 9.8% 10%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 0 0% 98%;
 
-    --info: 17 100% 91%;
-    --info-foreground: 17 100% 48%;
+        --info: 17 100% 91%;
+        --info-foreground: 17 100% 48%;
 
-    --success: 149 50% 80%;
-    --success-foreground: 149 90% 29%;
+        --success: 149 50% 80%;
+        --success-foreground: 149 90% 29%;
 
-    --warning: 48 96% 89%;
-    --warning-foreground: 25 95% 53%;
+        --warning: 48 96% 89%;
+        --warning-foreground: 25 95% 53%;
 
-    --error: 17 100% 91%;
-    --error-foreground: 17 100% 41%;
+        --error: 17 100% 91%;
+        --error-foreground: 17 100% 41%;
 
-    --ring: 157 18% 80%;
+        --ring: 157 18% 80%;
 
-    --radius: 0.5rem;
-  }
+        --radius: 0.5rem;
+    }
 }
 
 @layer base {
- 
-
-  html {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: "Nunito", sans-serif;
-    font-size: 16px;
-  }
-  body {
-    @apply text-text;
-    @apply bg-muted;
-    font-feature-settings: "rlig" 1, "calt" 1;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-
-  
-
+    html {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        font-family: "Nunito", sans-serif;
+        font-size: 16px;
+    }
+    body {
+        @apply text-text;
+        @apply bg-muted;
+        font-feature-settings:
+            "rlig" 1,
+            "calt" 1;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
 }
 
 #root {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 @media (max-width: 640px) {
-  .container {
-    @apply px-4;
-  }
+    .container {
+        @apply px-4;
+    }
 }
 
 .no-scrollbar::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 .no-scrollbar {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 .text-truncate {
-  max-width: 220px;
-  overflow-wrap: break-word;
+    max-width: 220px;
+    overflow-wrap: break-word;
 }
 
 .allow-3-lines {
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .code-block {
@@ -125,6 +121,6 @@
     webkit-line-clamp: 3;
     word-break: break-all;
 }
-.ql-editor{
-  height:320px !important;
+.ql-editor {
+    height: 50vh !important;
 }
