--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@
     }
     body {
         @apply text-text;
-        @apply bg-muted;
+        @apply bg-white;
         font-feature-settings:
             "rlig" 1,
             "calt" 1;
@@ -122,7 +122,7 @@
     word-break: break-all;
 }
 .ql-editor {
-    height: 50vh !important;
+    height: 40vh !important;
 }
 
 .bg-image {
