--- a/src/index.css
+++ b/src/index.css
@@ -73,8 +73,8 @@
 #root {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     display: flex;
+    @apply no-scrollbar;
     flex-direction: column;
 }
 
@@ -104,6 +104,13 @@
     overflow: hidden;
 }
 
+.allow-2-lines {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 .code-block {
     border: 1px solid #ddd;
     border-left: 3px solid;
@@ -116,7 +123,6 @@
     max-width: 100%;
     overflow: auto;
     @apply p-3;
-    display: block;
     word-wrap: break-word;
     webkit-line-clamp: 3;
     word-break: break-all;
