--- a/src/index.css
+++ b/src/index.css
@@ -2,163 +2,173 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
-    :root {
-        --background: 240 20% 97%;
-        --foreground: 0 0% 0%;
+  :root {
+    --background: 240 20% 97%;
+    --foreground: 0 0% 0%;
 
-        --text: 0 0% 0%;
+    --text: 0 0% 0%;
 
-        --popover: 60 4.8% 95.9%;
-        --popover-foreground: 25 5.3% 44.7%;
+    --popover: 60 4.8% 95.9%;
+    --popover-foreground: 25 5.3% 44.7%;
 
-        --border: 240 13% 92%;
-        --input: 184 13% 38%;
+    --border: 240 13% 92%;
+    --input: 184 13% 38%;
 
-        --card: 60 4.8% 95.9%;
-        --card-foreground: 25 5.3% 44.7%;
+    --card: 60 4.8% 95.9%;
+    --card-foreground: 25 5.3% 44.7%;
 
-        --primary-foreground: 220 57% 12%;
-        --secondary-foreground: 184 13% 38%;
+    --primary-foreground: 220 57% 12%;
+    --secondary-foreground: 184 13% 38%;
 
-        --muted: 60 4.8% 95.9%;
-        --muted-foreground: 25 5.3% 44.7%;
+    --muted: 60 4.8% 95.9%;
+    --muted-foreground: 25 5.3% 44.7%;
 
-        --accent: 60 4.8% 95.9%;
-        --accent-foreground: 24 9.8% 10%;
+    --accent: 60 4.8% 95.9%;
+    --accent-foreground: 24 9.8% 10%;
 
-        --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 0 0% 98%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
 
-        --info: 17 100% 91%;
-        --info-foreground: 17 100% 48%;
+    --info: 17 100% 91%;
+    --info-foreground: 17 100% 48%;
 
-        --success: 149 50% 80%;
-        --success-foreground: 149 90% 29%;
+    --success: 149 50% 80%;
+    --success-foreground: 149 90% 29%;
 
-        --warning: 48 96% 89%;
-        --warning-foreground: 25 95% 53%;
+    --warning: 48 96% 89%;
+    --warning-foreground: 25 95% 53%;
 
-        --error: 17 100% 91%;
-        --error-foreground: 17 100% 41%;
+    --error: 17 100% 91%;
+    --error-foreground: 17 100% 41%;
 
-        --ring: 157 18% 80%;
+    --ring: 157 18% 80%;
 
-        --radius: 0.5rem;
-    }
+    --radius: 0.5rem;
+  }
 }
 
 @layer base {
-    html {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        font-family: "Nunito", sans-serif;
-        font-size: 16px;
-    }
-    body {
-        @apply text-text;
-        @apply bg-white;
-        font-feature-settings:
-            "rlig" 1,
-            "calt" 1;
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
+  html {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: "Nunito", sans-serif;
+    font-size: 16px;
+  }
+  body {
+    @apply text-text;
+    @apply bg-white;
+    font-feature-settings:
+      "rlig" 1,
+      "calt" 1;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 #root {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    @apply no-scrollbar;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  @apply no-scrollbar;
+  flex-direction: column;
 }
 
 @media (max-width: 640px) {
-    .container {
-        @apply px-4;
-    }
+  .container {
+    @apply px-4;
+  }
 }
 
 .no-scrollbar::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 .no-scrollbar {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .text-truncate {
-    max-width: 220px;
-    overflow-wrap: break-word;
+  max-width: 220px;
+  overflow-wrap: break-word;
 }
 
 .allow-3-lines {
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .allow-2-lines {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .clamp-lines {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .code-block {
-    border: 1px solid #ddd;
-    border-left: 3px solid;
-    @apply border-l-primary;
-    @apply rounded-sm;
-    page-break-inside: avoid;
-    font-family: monospace;
-    font-size: 15px;
-    line-height: 1.6;
-    max-width: 100%;
-    overflow: auto;
-    @apply p-3;
-    word-wrap: break-word;
-    webkit-line-clamp: 3;
-    word-break: break-all;
+  border: 1px solid #ddd;
+  border-left: 3px solid;
+  @apply border-l-primary;
+  @apply rounded-sm;
+  page-break-inside: avoid;
+  font-family: monospace;
+  font-size: 15px;
+  line-height: 1.6;
+  max-width: 100%;
+  overflow: auto;
+  @apply p-3;
+  word-wrap: break-word;
+  webkit-line-clamp: 3;
+  word-break: break-all;
 }
 .ql-editor {
-    height: 40vh !important;
+  min-height: 420px !important;
+}
+
+.ql-toolbar.ql-snow {
+  @apply border-border;
+  @apply rounded-sm;
+}
+.ql-container.ql-snow {
+  @apply border-border;
+  @apply rounded-none;
+  @apply rounded-b-sm;
 }
 
 .bg-image {
-    /* Add the blur effect */
-    /* filter: blur(8px);
+  /* Add the blur effect */
+  /* filter: blur(8px);
     -webkit-filter: blur(8px); */
 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .bg-text {
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
-    color: white;
-    font-weight: bold;
-    border: 3px solid #f1f1f1;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 80%;
-    padding: 20px;
-    text-align: center;
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
 }
